<resources>
    <string name="app_name">Optus</string>

    <string name="scenario_1">Scenario 1</string>
    <string name="scenario_2">Scenario 2</string>
    <string name="textview">TextView</string>
    <string name="result_placeholder">Selected items will be displayed here</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_1">Fragment 1</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigate">Navigate</string>
    <string name="select_destination">Select a destination:</string>
</resources>
