<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.Activity_scenario1">

    <TextView android:id="@+id/txt_activity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:text="@string/scenario_2" />

    <TextView android:id="@+id/txt_spn_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:text="@string/select_destination"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@+id/txt_activity_label"/>

    <Spinner android:id="@+id/spn_destinations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_spn_label"
        android:layout_marginTop="@dimen/dp_10"/>

    <Button android:id="@+id/btn_navigate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigate"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
